# chub

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  application.py
app/api/: __init__.py  automations.py  health.py  logs.py  maintenance.py  project_documents.py  status.py  tasks.py
app/automations/: __init__.py  browser.py  command.py  config.py  extensions.py  lock.py  manager.py  models.py  operations.py  runner.py  store.py
config/: automations.example.yaml  automations.yaml  settings.macos.example.yaml  settings.ubuntu.example.yaml  settings.yaml
docs/: ACCEPTANCE_PHASE_1.md  ARCHITECTURE_PHASE_1.md  AUTOMATION_DOWNLOAD_DESIGN.md  CODEX_REMOTE_OPTIONS_PHASE_2.md  OPENCLAW_RESEARCH.md  PRD_PHASE_1.md  PRD_PHASE_2.md  TASKS_PHASE_1.md  TASKS_PHASE_2.md  design_documents.json
scripts/: chub  chub-codex-hook  chub-codex-launcher  chub-web-restart
tests/: __init__.py  conftest.py  test_automations.py  test_automations_api.py  test_codex_api.py  test_codex_connections.py  test_codex_discovery.py  test_codex_hook.py  test_codex_manager.py  test_codex_polling.py  test_codex_profile.py  test_codex_store.py  test_codex_tickets.py  test_config.py  test_design_documents.py  test_health.py  test_log_reader.py  test_logs_api.py  test_maintenance_api.py  test_network.py  test_platform.py  test_platform_tasks.py  test_project_documents_archive.py  test_service_cli.py  test_status_api.py  test_system_status.py  test_task_command.py  test_task_executor.py  test_task_registry.py  test_tasks_api.py  test_web.py
(+72 files in other folders)
