[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "chub"
version = "0.1.0"
description = "A lightweight personal device Hub Node"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "jinja2>=3.1,<4.0",
    "psutil>=6.0,<8.0",
    "pydantic>=2.9,<3.0",
    "python-dotenv>=1.0,<2.0",
    "PyYAML>=6.0,<7.0",
    "uvicorn[standard]>=0.30,<1.0",
    "websockets>=13,<17",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
